--- a/index.html
+++ b/index.html
@@ -12,57 +12,57 @@
   <body>
     <div class="container">
       <h1>Learn jQuery!!!</h1>
-      <h2>With flashcards...</h2>
-      <!--flashcards-->
+      <h2>With flashCards...</h2>
+      <!--flashCards-->
       <div class="center-div">
         <div class="row">
           <div class="col-sm-3">
-            <div id="JS" class="well">
-              <div class="termJS">
-                <h3 class='clickableJS'>JavaScript</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>JavaScript</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionJS">
-                <h3 class='clickableJS'>JavaScript</h3>
+              <div class="none">
+                <h3>JavaScript</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="OP" class="well">
+            <div class="well flashCard">
               <div class="termOP">
-                <h3 class='clickableOP'>Operators</h3>
+                <h3>Operators</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionOP">
-                <h3 class='clickableOP'>Operators</h3>
+              <div class="none">
+                <h3>Operators</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="VA" class="well">
-              <div class="termVA">
-                <h3 class='clickableVA'>Variables</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Variables</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionVA">
-                <h3 class='clickableVA'>Variables</h3>
+              <div class="none">
+                <h3>Variables</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="VN" class="well">
-              <div class="termVN">
-                <h3 class='clickableVN'>Variable Names</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Variable Names</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionVN">
-                <h3 class='clickableVN'>Varible Names</h3>
+              <div class="none">
+                <h3>Varible Names</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
@@ -71,52 +71,52 @@
         <!--row2-->
         <div class="row">
           <div class="col-sm-3">
-            <div id="FU" class="well">
-              <div class="termFU">
-                <h3 class='clickableFU'>Functions</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Functions</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionFU">
-                <h3 class='clickableFU'>Functions</h3>
+              <div class="none">
+                <h3>Functions</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="MT" class="well">
-              <div class="termMT">
-                <h3 class='clickableMT'>Methods</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Methods</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionMT">
-                <h3 class='clickableMT'>Methods</h3>
+              <div class="none">
+                <h3>Methods</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="AR" class="well">
-              <div class="termAR">
-                <h3 class='clickableAR'>Arguments</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Arguments</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionAR">
-                <h3 class='clickableAR'>Arguments</h3>
+              <div class="none">
+                <h3>Arguments</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="PR" class="well">
-              <div class="termPR">
-                <h3 class='clickablePR'>Parameters</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Parameters</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionPR">
-                <h3 class='clickablePR'>Parameters</h3>
+              <div class="none">
+                <h3>Parameters</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
@@ -125,52 +125,52 @@
         <!--row3-->
         <div class="row">
           <div class="col-sm-3">
-            <div id="RE" class="well">
-              <div class="termRE">
-                <h3 class='clickableRE'>Return</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Return</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionRE">
-                <h3 class='clickableRE'>Return</h3>
+              <div class="none">
+                <h3>Return</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="CM" class="well">
-              <div class="termCM">
-                <h3 class='clickableCM'>NaN</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>NaN</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionCM">
-                <h3 class='clickableCM'>NaN</h3>
+              <div class="none">
+                <h3>NaN</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="ST" class="well">
-              <div class="termST">
-                <h3 class='clickableST'>Strings</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Strings</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionST">
-                <h3 class='clickableST'>Strings</h3>
+              <div class="none">
+                <h3>Strings</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div id="BO" class="well">
-              <div class="termBO">
-                <h3 class='clickableBO'>Booleans</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>Booleans</h3>
                 <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionBO">
-                <h3 class='clickableBO'>Booleans</h3>
+              <div class="none">
+                <h3>Booleans</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
